k8s/gitops/00-platform/03-ingress/argocd-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-deny-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/group.name: public
    alb.ingress.kubernetes.io/group.order: "21"

    alb.ingress.kubernetes.io/actions.argocd-deny: >
      {
        "type": "fixed-response",
        "fixedResponseConfig": {
          "contentType": "text/plain",
          "statusCode": "403",
          "messageBody": "Access denied"
        }
      }

spec:
  ingressClassName: alb

  rules:
    - host: argocd.operation.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-deny
                port:
                  name: use-annotation
