k8s/gitops/00-platform/03-ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-ingress
  namespace: argocd

  annotations:
    alb.ingress.kubernetes.io/group.name: public
    alb.ingress.kubernetes.io/group.order: "20"

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/security-groups: "sg-0eeeab228e4f753b6"
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:ap-south-1:100678004827:certificate/9fb490ba-0262-4bc4-a337-aa9c1d37f4d9'
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/backend-protocol: HTTPS

    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-port: "443"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/conditions.argocd-server: >
      [
        {
          "field": "source-ip",
          "sourceIpConfig": {
            "values": ["122.168.92.130/32"]
          }
        }
      ]

spec:
  ingressClassName: alb

  rules:
    - host: argocd.operation.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
