k8s/gitops/00-platform/03-ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prometheus-ingress
  namespace: monitoring

  annotations:
    alb.ingress.kubernetes.io/group.name: public
    alb.ingress.kubernetes.io/group.order: "40"

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/security-groups: "sg-0b0c693e8a5c02af4"
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:ap-south-1:100678004827:certificate/9fb490ba-0262-4bc4-a337-aa9c1d37f4d9'
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/healthcheck-path: /-/ready
    alb.ingress.kubernetes.io/healthcheck-port: "9090"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/conditions.monitoring-kube-prometheus-prometheus: >
      [
        {
          "field": "source-ip",
          "sourceIpConfig": {
            "values": ["122.168.92.130/32"]
          }
        }
      ]

spec:
  ingressClassName: alb

  rules:
    - host: prometheus.operation.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
